project-2-the-force/theLanguageEmporium/force-app/main/default/objects/QA_Review__c/QA_Review__c.object-meta.xml
<CustomObject>
    <label>QA Review</label>
    <nameField>
        <displayFormat>QARevID-{0000}</displayFormat>
        <label>QA Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>