project-2-the-force/theLanguageEmporium/force-app/main/default/objects/QA_Review__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>QA Reviews</relationshipLabel>
    <relationshipName>QA_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>