project-2-the-force/theLanguageEmporium/force-app/main/default/objects/QA_Review__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Lesson/Tutoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>