project-2-the-force/theLanguageEmporium/force-app/main/default/objects/QA_Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Reviewer must be a QA Tester!</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Quality Assurance Tester</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>